--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -30,6 +30,7 @@
     <!--  Font attributes for the app  -->
     <attr name="fontItalic" format="reference" />
     <attr name="fontRegular" format="reference" />
+    <attr name="fontMedium" format="reference" />
     <attr name="fontSemiBold" format="reference" />
     <attr name="fontSemiBoldItalic" format="reference" />
     <attr name="secondaryFontRegular" format="reference" />
