--- a/OpenEdXMobile/res/values/text_styles.xml
+++ b/OpenEdXMobile/res/values/text_styles.xml
@@ -125,6 +125,10 @@
         <item name="android:fontFamily">?attr/fontRegular</item>
     </style>
 
+    <style name="medium_text">
+        <item name="android:fontFamily">?attr/fontMedium</item>
+    </style>
+
     <style name="text_network_error" parent="@style/semibold_white_text">
         <item name="android:textSize">@dimen/edx_x_small</item>
         <item name="android:layout_width">match_parent</item>
