fix: Address PR comments

--- a/OpenEdXMobile/res/layout/activity_login.xml
+++ b/OpenEdXMobile/res/layout/activity_login.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <include layout="@layout/toolbar" />
+    <include
+        layout="@layout/toolbar"
+        android:background="@color/neutralWhite" />
 
     <ScrollView
         android:id="@+id/root_view"
