--- a/OpenEdXMobile/res/layout/toolbar.xml
+++ b/OpenEdXMobile/res/layout/toolbar.xml
@@ -5,6 +5,7 @@
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
     app:theme="@style/AppTheme.AppBarOverlay"
     tools:minHeight="?android:attr/actionBarSize">
 
