--- a/OpenEdXMobile/res/layout/edit_user_profile_switch.xml
+++ b/OpenEdXMobile/res/layout/edit_user_profile_switch.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     android:orientation="vertical"
-    android:padding="@dimen/edx_margin"
-    android:background="@color/white">
+    android:padding="@dimen/edx_margin">
 
     <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Label"
         android:textColor="@color/neutralBlackT"
-        android:textSize="@dimen/edx_small" />
+        android:textSize="@dimen/edx_small"
+        tools:text="Label" />
 
     <RadioGroup
         android:id="@+id/options"
@@ -21,8 +21,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/edx_margin"
+        android:background="@drawable/neutral_x_light_rounded_bg"
         android:clipToPadding="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="@dimen/edx_x_quarter_margin">
 
         <RadioButton
             android:id="@+id/option_one"
@@ -30,7 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/radio_tab_height"
             android:layout_weight="1"
-            tools:text="Option One"/>
+            tools:text="Option One" />
 
         <RadioButton
             android:id="@+id/option_two"
@@ -46,8 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/edx_margin"
-        tools:text="Instructions"
         android:textColor="@color/neutralBlackT"
-        android:textSize="@dimen/edx_x_small" />
+        android:textSize="@dimen/edx_x_small"
+        tools:text="Instructions" />
 
 </LinearLayout>
