fix: App Nav UX Feedback Improvements
- Update and verify the toolbar titles for the main dash board in case of expand (match with h3) and collapse (match with h4).
- Course dashboard shouldn't close on `Cancel` action from the price fetch error popup.

fixes: LEARNER-9437

--- a/OpenEdXMobile/res/values/styles.xml
+++ b/OpenEdXMobile/res/values/styles.xml
@@ -559,7 +559,7 @@
 
     <style name="MainDashboardCollapsedToolbarTitle">
         <item name="android:textColor">@color/primaryBaseColor</item>
-        <item name="android:textSize">@dimen/edx_large</item>
+        <item name="android:textSize">@dimen/edx_x_large</item>
         <item name="android:fontFamily">@font/inter_semi_bold</item>
         <item name="android:textDirection">locale</item>
         <item name="android:gravity">start</item>
