fix: address PR comments

--- a/OpenEdXMobile/res/values/attrs.xml
+++ b/OpenEdXMobile/res/values/attrs.xml
@@ -33,5 +33,6 @@
     <attr name="fontMedium" format="reference" />
     <attr name="fontSemiBold" format="reference" />
     <attr name="fontSemiBoldItalic" format="reference" />
+    <attr name="fontBold" format="reference" />
     <attr name="secondaryFontRegular" format="reference" />
 </resources>
