--- a/OpenEdXMobile/res/layout/fragment_learn.xml
+++ b/OpenEdXMobile/res/layout/fragment_learn.xml
@@ -39,13 +39,11 @@
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/tv_selected_item"
+                        style="@style/MainDashboardToolbarTitle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="?attr/fontSemiBold"
                         android:paddingEnd="@dimen/learn_drop_down_icon_margin"
                         android:text="@string/label_my_courses"
-                        android:textColor="@color/primaryDarkColor"
-                        android:textSize="@dimen/edx_x_large"
                         tools:ignore="RtlSymmetry" />
 
                     <androidx.appcompat.widget.AppCompatImageView
